crates/kabosu/tests/snapshots/normalize_snapshot__normalize_empty.snap
---
source: crates/kabosu/tests/normalize_snapshot.rs
expression: "kabosu::to_string(&Empty).unwrap()"
---
empty_array = []

[empty_table]
