crates/kabosu/tests/snapshots/normalize_snapshot__normalize_floats.snap
---
source: crates/kabosu/tests/normalize_snapshot.rs
expression: "kabosu::to_string(&Floats).unwrap()"
---
one = 1.0
pi = 3.141592653589793
neg_zero = -0.0
big = 1e21
small = 1e-7
sum = 0.30000000000000004
max = 1.7976931348623157e308
denormal = 5e-324
inf = inf
neg_inf = -inf
nan = nan
list = [1.5, 2.0, -0.5]
